fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    padding: 2em;
+    padding: 3em;
 }
 
 .bar-viz {
@@ -29,7 +29,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 45%;
+    padding-right: 10%;
 }
 
 .tooltipp {
